src/components/top-masthead.less
@import "../variables.less";

.top-masthead {
  .masthead-icons {
    position: relative;

    .masthead-icon-item {
      position: absolute;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      font-size: 3rem;
      width: 4rem;
      height: 4rem;
      // border: 3px solid rgba(3, 27, 78, 0.3);
      border-radius: 30px;

      > i.icon {
        color: rgba(3, 27, 78, 0.3);
        margin: 0;
      }

      &:first-child {
        left: -7%;
        top: -4vw;
      }
      &:nth-child(2) {
        left: 10%;
        top: -10vw;
      }
    }
  }

  .platform-screenshot .screenshot-container {
    position: relative;

    .play-button-container {
      display: flex;
      align-items: center;
      justify-content: center;
      position: absolute;
      z-index: 10;
      width: 200px;
      height: 100px;
      left: 50%;
      margin-left: -100px;
      top: 50%;
      margin-top: -60px;
      cursor: pointer;

      .play-icon {
        width: 50px;
        height: 50px;
        color: @blue;
      }

      &:hover .play-icon {
        color: @linkColor;
      }

      > div {
        font-weight: bold;
      }
    }
    
    .screenshot {
      max-width: 1024px;
      margin: 0 auto;

      &.screenshot-ios, &.screenshot-android {
        max-width: 800px;
      }
    }
    .masthead-spacer {
      display: block;
      height: 80vh;
    }
  }
}

